Finished mask adding, beginning testing on everything now

--- a/ipynbs/tempelateMatching.ipynb
+++ b/ipynbs/tempelateMatching.ipynb
@@ -205,9 +205,37 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 83,
+   "id": "7ae84606-fd39-4b8e-a10d-0bdbce7ce63e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4 cv.TM_CCOEFF\n",
+      "5 cv.TM_CCOEFF_NORMED\n",
+      "2 cv.TM_CCORR\n",
+      "3 cv.TM_CCORR_NORMED\n",
+      "0 cv.TM_SQDIFF\n",
+      "1 cv.TM_SQDIFF_NORMED\n"
+     ]
+    }
+   ],
+   "source": [
+    "for meth in methods:\n",
+    "    print(eval(meth), meth)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 78,
    "id": "9dea55c6-1866-494b-9d0a-0b1708e22fd6",
    "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
     "tags": []
    },
    "outputs": [
