Setting up final versions

--- a/tempMatching2.ipynb
+++ b/tempMatching2.ipynb
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 61,
    "id": "313cc874-e2a2-499a-be08-dd93a11da5c6",
    "metadata": {},
    "outputs": [],
@@ -318,6 +318,7 @@
     "    bookMasks = []\n",
     "    isABookMask = False\n",
     "    temp = outputs[\"instances\"]\n",
+    "    mask = None\n",
     "\n",
     "    if len(outputs[\"instances\"].pred_classes) == 0: # nothing detected\n",
     "        imagec = image\n",
@@ -337,6 +338,7 @@
     "        img_dilation = cv2.dilate(indices, kernel, iterations=iterations)\n",
     "        bookMask = getMaskFromImg(image, img_dilation)\n",
     "        imagec = bookMask\n",
+    "        mask = img_dilation\n",
     "        # imagec = getMaskFromImg(imagec, img_dilation)\n",
     "        isABookMask = True\n",
     "    else:  # lots of people in the img\n",
@@ -356,9 +358,9 @@
     "                    tempmask = cv2.dilate(tempmask, kernel, iterations=1)\n",
     "                    indices = indices + tempmask\n",
     "            cntr+= 1\n",
+    "        mask = indices\n",
     "        imgagec = subtractMaskFromImg(image, indices)\n",
-    "    # print(imagec, out, temp.pred_classes, isABookMask)\n",
-    "    return imagec, out, temp.pred_classes, isABookMask"
+    "    return imagec, out, temp.pred_classes, isABookMask, mask"
    ]
   },
   {
